--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"axios": "^1.4.0",
 		"daisyui": "^2.51.6",
-		"googleapis": "^118.0.0"
+		"googleapis": "^118.0.0",
+		"vanilla-lazyload": "^17.8.3"
 	}
 }
