--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"daisyui": "^2.51.6",
 		"googleapis": "^118.0.0",
 		"simple-svelte-autocomplete": "^2.5.2",
+		"svelte-outclick": "^3.5.0",
 		"vanilla-lazyload": "^17.8.3"
 	}
 }
